<resources>
    <string name="app_name">Movie Quiz App</string>
    <string name="title_name">Movie quiz for Winners</string>
    <string name="subtitle">Are you the true fan you say you are? Test your skills right here!</string>
    <string name="q1">Question 1:</string>
    <string name="q2">Question 2:</string>
    <string name="q3">Question 3:</string>
    <string name="q4">Question 4:</string>
    <string name="q5">Question 5:</string>
    <string name="q6">Question 6:</string>
    <string name="question_one">Which two actors directed themselves in movies and won Oscars for Best Actor?</string>
    <string name="question_one_answer_one">Al Pacino and Timothy Hutton</string>
    <string name="question_one_answer_two">Jack Nicholson and Kevin Spacey</string>
    <string name="question_one_answer_three">Laurence Olivier and Roberto Benigni</string>
    <string name="question_one_answer_four">Tom Hanks and Paul Newman</string>
    <string name="question_two">Who is the most nominated actor in Academy history?</string>
    <string name="question_two_answer_one">Jack Nicholson</string>
    <string name="question_two_answer_two">Laurence Olivier</string>
    <string name="question_two_answer_three">Spencer Tracy</string>
    <string name="question_two_answer_four">Paul Newman</string>
    <string name="question_three">Actor Ryan Reynolds appears as Wade Wilson in the 2009 movie X-Men Origins: Wolverine.</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="question_four">Jim Carey was considered for the role of Captain Jack Sparrow in Pirates of the Caribbean.</string>
    <string name="question_five">What is the name of the best known city in all the Batman movies?</string>
    <string name="question_five_hint">Write your answer here</string>
    <string name="question_six">Which of the following movies have been made by Martin Scorsese ? (pick 2 answers)</string>
    <string name="question_six_answer_one">Gangs of New York</string>
    <string name="question_six_answer_two">The Godfather</string>
    <string name="question_six_answer_three">The Shawshank Redemption</string>
    <string name="question_six_answer_four">The Wolf of Wall Street</string>
    <string name="score_button">Get your score</string>
    <string name="reset_button">Try again</string>
    <string name="toast0">None right. I can\'t even with you now! I\'m speechless!</string>
    <string name="toast1">SHAME! You only got %1$d correct. Try again why don\'t you!</string>
    <string name="toast2">Not too bad, you got %1$d correct answers. I know you can do better. </string>
    <string name="toast3">Great job! You got %1$d correct answers. I declare you movie royalty!</string>
    <string name="end_popcorn_image">End popcorn image</string>
    <string name="movie_film">Opening movie roll</string>
</resources>
